--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "react-pro-sidebar": "^1.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
